<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Poet Assistant</string>
    <string name="tab_pattern">Pattern</string>
    <string name="tab_favorites">Favorites</string>
    <string name="tab_wotd">Words of the day</string>
    <string name="tab_rhymer">Rhymer</string>
    <string name="tab_thesaurus">Thesaurus</string>
    <string name="tab_dictionary">Dictionary</string>
    <string name="tab_reader">Composer</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_clear">Clear</string>
    <string name="action_search">Search</string>
    <string name="action_random_word">Random word</string>
    <string name="action_clear_search_history">Clear search history</string>
    <string name="confirm_clear_search_history">Clear the search history?</string>
    <string name="action_wotd_history">Words of the day</string>
    <string name="action_clear_favorites">Clear all favorite words?</string>
    <string name="content_description_toggle_favorite">Toggle favorite</string>
    <string name="search_history_cleared">Search history cleared</string>
    <string name="favorites_cleared">Favorites cleared</string>
    <string name="action_export_favorites">Export favorites</string>
    <string name="action_import_favorites">Import favorites</string>
    <string name="import_favorites_success">Favorites imported from %s</string>
    <string name="import_favorites_error">Could not import favorites file from %s</string>
    <string name="export_favorites_success">Favorites exported to %s</string>
    <string name="export_favorites_error">Could not export favorites file to %s</string>
    <string name="export_favorites_default_filename">poet-assistant-favorites.txt</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="search_hint">Lookup a word</string>
    <string name="favorites_list_header">Favorites</string>
    <string name="wotd_list_header">Words of the day</string>
    <string name="rhyme_section_stress_syllables">Strict rhyme matches:</string>
    <string name="rhyme_section_favorites">Favorites:</string>
    <string name="rhyme_section_one_syllable">Last syllable:</string>
    <string name="rhyme_section_two_syllables">Last 2 syllables:</string>
    <string name="rhyme_section_three_syllables">Last 3 syllables:</string>
    <string name="thesaurus_section_synonyms">Synonyms:</string>
    <string name="thesaurus_section_antonyms">Antonyms:</string>
    <string name="empty_pattern_list_with_query">Sorry, no words match &#8220;%s&#8221;</string>
    <string name="empty_favorites_list">You haven\'t starred any words yet.</string>
    <string name="empty_wotd_list">No words of the day yet</string>
    <string name="empty_rhymer_list_with_query">Sorry, no rhymes for &#8220;%s&#8221;</string>
    <string name="empty_thesaurus_list_with_query">Sorry, no synonyms for &#8220;%s&#8221;</string>
    <string name="empty_dictionary_list_with_query">Sorry, no definitions for &#8220;%s&#8221;</string>
    <string name="empty_list_without_query">Tap on %s to look up a word.</string>
    <string name="action_web_search">Look up %s</string>
    <string name="filter_hint">Filter results</string>
    <string name="help">Help</string>
    <string name="tts_play">Play</string>
    <string name="tts_hint">Compose your beautiful poetry here and press the play icon to listen to it</string>
    <string name="about_title">About %s</string>
    <string name="about_app_version">%1$s v%2$s</string>
    <string name="about_copyright">Copyright © 2016–Present Carmen Alvarez\nc@rmen.ca\nhttp://rmen.ca</string>
    <string name="about_projectUrl">Source code:\nhttp://github.com/caarmen/poet-assistant</string>
    <string name="about_issuesUrl">Report bugs:\nhttp://github.com/caarmen/poet-assistant/issues</string>
    <string name="about_rateUrl">Rate the app on the Play Store:\nhttps://play.google.com/store/apps/details?id=ca.rmen.android.poetassistant</string>
    <string name="about_legal">Legal:</string>
    <string name="about_privacy_policy">Privacy policy: https://github.com/caarmen/poet-assistant/blob/master/PRIVACY.md</string>
    <string name="about_license_app">Poet Assistant License (GPLv3)</string>
    <string name="about_license_rhyming_dictionary">Carnegie Mellon Pronunciation Dictionary License</string>
    <string name="about_license_thesaurus">WordNet Thesaurus License</string>
    <string name="about_license_dictionary">WordNet Dictionary License</string>
    <string name="about_license_google_ngram_dataset">Google Ngram Dataset License</string>
    <string name="about_license_support_lib">Android Support Library and Architecture Components License (Apache2): https://android.googlesource.com/platform/frameworks/support/+/master/LICENSE.txt</string>
    <string name="about_license_dagger">Dagger License (Apache2): https://github.com/google/dagger/blob/master/LICENSE.txt</string>
    <string name="about_license_kotlin">Kotlin License (Apache2): https://github.com/JetBrains/kotlin/blob/master/license/LICENSE.txt</string>
    <string name="about_license_prefs">Android Prefs License (Apache2): https://github.com/BoD/android-prefs/blob/master/LICENSE</string>
    <string name="about_porter_stemming_algorithm">Porter stemming algorithm: http://tartarus.org/martin/PorterStemmer/</string>
    <string name="license_title">Licensing Information</string>
    <string name="file_clear">Clear text</string>
    <string name="file_new_confirm_title">Clear current poem?</string>
    <string name="file">File</string>
    <string name="file_new">New</string>
    <string name="file_open">Open</string>
    <string name="file_save">Save</string>
    <string name="file_save_as">Save as</string>
    <string name="file_print">Print</string>
    <string name="file_opened">Opened %s</string>
    <string name="file_opened_error">Couldn\'t open file</string>
    <string name="file_saved">Saved poem to %s</string>
    <string name="file_saved_error">Couldn\'t save file</string>
    <string name="filter_title">Filter results</string>
    <string name="filter_rhymer_message">Only show words which are synonyms of this word:</string>
    <string name="filter_rhymer_label">"Synonyms of: "</string>
    <string name="filter_thesaurus_message">Only show words which rhyme with this word:</string>
    <string name="filter_thesaurus_label">"Rhymes of: "</string>
    <string name="filter_clear">Clear filter</string>
    <string name="menu_lookup_rhymer">Rhymer</string>
    <string name="menu_lookup_thesaurus">Thesaurus</string>
    <string name="menu_lookup_dictionary">Dictionary</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_more">More</string>
    <string name="snackbar_copied_text">Copied text to clipboard</string>
    <string name="title_activity_settings">Settings</string>
    <string name="wotd_setting_title">Word of the day</string>
    <string name="wotd_setting_description">Display a notification once a day with a random word.</string>
    <string name="wotd_notification_title">Word of the day: %s</string>
    <string name="wotd_notification_definition"><![CDATA[<br>\n<b>%1$s.</b> %2$s]]></string>
    <string name="wotd_setting_system_notification_priority_label_max">Max</string>
    <string name="wotd_setting_system_notification_priority_label_high">High</string>
    <string name="wotd_setting_system_notification_priority_label_default">Default</string>
    <string name="wotd_setting_system_notification_priority_label_low">Low</string>
    <string name="wotd_setting_system_notification_priority_label_min">Min</string>
    <string-array name="wotd_setting_system_notification_priority_labels">
        <item>@string/wotd_setting_system_notification_priority_label_max</item>
        <item>@string/wotd_setting_system_notification_priority_label_high</item>
        <item>@string/wotd_setting_system_notification_priority_label_default</item>
        <item>@string/wotd_setting_system_notification_priority_label_low</item>
        <item>@string/wotd_setting_system_notification_priority_label_min</item>
    </string-array>
    <string-array name="wotd_setting_system_notification_priority_values" translatable="false">
        <item>max</item>
        <item>high</item>
        <item>default</item>
        <item>low</item>
        <item>min</item>
    </string-array>
    <string name="wotd_setting_system_notification_priority_title">Notification priority</string>
    <string name="wotd_setting_system_notification_priority_summary">%s</string>
    <string name="all_rhymes_setting_title">Rhymes without definitions</string>
    <string name="all_rhymes_setting_description">Display all rhymes, even if words have no definitions (search may be slower)</string>
    <string name="match_ao_aa_setting_title">AO /ɔ/ matches AA /ɑ/</string>
    <string name="match_ao_aa_setting_description">AO /ɔ/: "off".\nAA /ɑ/: "father".</string>
    <string name="match_aor_ao_setting_title">AOR /ɔr/ matches AO /ɔ/</string>
    <string name="match_aor_ao_setting_description">AOR /ɔr/: "more".\nAO /ɔ/: "thaw".</string>
    <string name="thesaurus_reverse_lookup_setting_title">Include reverse lookup</string>
    <string name="thesaurus_reverse_lookup_setting_description">May be slower and include less relevant results.</string>
    <string name="share">Share</string>
    <string name="share_poem_text">Share poem text</string>
    <string name="share_poem_audio">Share poem audio</string>
    <string name="share_poem_audio_snackbar">Saving poem to audio file</string>
    <string name="share_poem_audio_progress_notification_title">Saving poem</string>
    <string name="share_poem_audio_progress_notification_message">Saving poem to audio file…</string>
    <string name="share_poem_audio_ready_notification_title">Poem audio ready</string>
    <string name="share_poem_audio_ready_notification_message">Tap to share the poem audio</string>
    <string name="share_poem_audio_error_notification_title">Error saving poem audio</string>
    <string name="share_poem_audio_error_notification_message">There was a problem saving the poem audio</string>
    <string name="share_patterns_title">Words matching %s:\n</string>
    <string name="share_favorites_title">My favorite words:\n</string>
    <string name="share_wotd_title">The last words of the day:\n</string>
    <string name="share_rhymer_title">Rhymes for %s:\n</string>
    <string name="share_thesaurus_title">Synonyms for %s:\n</string>
    <string name="share_rhymer_title_with_filter">Rhymes for %1$s which are synonyms of %2$s:\n</string>
    <string name="share_thesaurus_title_with_filter">Synonyms for %1$s which rhyme with %2$s:\n</string>
    <string name="share_dictionary_title">Definitions of %s:\n</string>
    <string name="share_rt_heading">\n%s\n</string>
    <string name="share_rt_subheading">"\n  %s\n"</string>
    <string name="share_rt_entry">"    %s\n"</string>
    <string name="share_wotd_entry">"%1$s: %2$s\n"</string>
    <string name="pref_category_voice">Voice settings</string>
    <string name="pref_voice_title">Voice</string>
    <string name="pref_voice_summary">%s</string>
    <string name="pref_voice_speed_title">Voice speed (%)</string>
    <string name="pref_voice_pitch_title">Voice pitch (%)</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme_summary">%s</string>
    <string name="pref_layout_title">Layout</string>
    <string name="pref_layout_summary">%s</string>
    <string name="pref_voice_preview_title">Preview</string>
    <string name="pref_voice_preview_summary">Listen to a voice sample</string>
    <string name="pref_system_tts_settings_title">System voice settings</string>
    <string name="pref_system_tts_settings_description">This will leave Poet Assistant and open the system text-to-speech settings on your device.</string>
</resources>