<!--
  ~ Copyright (c) 2016-2017 Carmen Alvarez
  ~
  ~ This file is part of Poet Assistant.
  ~
  ~ Poet Assistant is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Poet Assistant is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Poet Assistant.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="PREF_CATEGORY_VOICE"
        android:title="@string/pref_category_voice">

        <!--suppress AndroidElementNotAllowed -->
        <ca.rmen.android.poetassistant.settings.VoicePreference
            android:defaultValue="VOICE_SYSTEM"
            android:key="PREF_VOICE"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="@string/pref_voice_summary"
            android:title="@string/pref_voice_title" />

        <!--suppress AndroidElementNotAllowed -->
        <SeekBarPreference
            android:layout="@layout/preference_seekbar_fix"
            android:max="200"
            android:defaultValue="100"
            android:key="PREF_VOICE_SPEED_V3"
            android:title="@string/pref_voice_speed_title" />

        <!--suppress AndroidElementNotAllowed -->
        <SeekBarPreference
            android:layout="@layout/preference_seekbar_fix"
            android:max="200"
            android:defaultValue="100"
            android:key="PREF_VOICE_PITCH_V3"
            android:title="@string/pref_voice_pitch_title" />

        <Preference
            android:title="@string/pref_voice_preview_title"
            android:key="PREF_VOICE_PREVIEW"
            android:summary="@string/pref_voice_preview_summary"
            android:widgetLayout="@layout/pref_voice_preview" />

        <Preference
            android:key="PREF_SYSTEM_TTS_SETTINGS"
            android:summary="@string/pref_system_tts_settings_description"
            android:title="@string/pref_system_tts_settings_title">
            <intent android:action="com.android.settings.TTS_SETTINGS" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="PREF_CATEGORY_OTHER"
        android:title="@string/pref_category_other">


        <!--suppress AndroidElementNotAllowed -->
        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="PREF_ALL_RHYMES_ENABLED"
            android:summary="@string/all_rhymes_setting_description"
            android:title="@string/all_rhymes_setting_title" />

        <!--suppress AndroidElementNotAllowed -->
        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="PREF_STRICT_VOWEL_MATCHING_ENABLED"
            android:summary="@string/strict_vowel_matching_setting_description"
            android:title="@string/strict_vowel_matching_setting_title" />

        <ListPreference
            android:defaultValue="Light"
            android:entries="@array/pref_theme_titles"
            android:entryValues="@array/pref_theme_values"
            android:key="PREF_THEME"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="@string/pref_theme_summary"
            android:title="@string/pref_theme_title" />

        <ListPreference
            android:defaultValue="Efficient"
            android:entries="@array/pref_layout_titles"
            android:entryValues="@array/pref_layout_values"
            android:key="PREF_LAYOUT"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="@string/pref_layout_summary"
            android:title="@string/pref_layout_title" />

        <!--suppress AndroidElementNotAllowed -->
        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="PREF_WOTD_ENABLED"
            android:summary="@string/wotd_setting_description"
            android:title="@string/wotd_setting_title" />

        <Preference
            android:key="PREF_CLEAR_SEARCH_HISTORY"
            android:title="@string/action_clear_search_history"/>
    </PreferenceCategory>

</PreferenceScreen>
