<!--
  ~ Copyright (c) 2016 Carmen Alvarez
  ~
  ~ This file is part of Poet Assistant.
  ~
  ~ Poet Assistant is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Poet Assistant is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Poet Assistant.  If not, see <http://www.gnu.org/licenses/>.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@android:id/empty"
        style="?attr/textAppearanceSearchResultTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@null" />

    <LinearLayout
        android:id="@+id/list_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="48dp">

                <TextView
                    android:id="@+id/tv_list_header"
                    style="?android:attr/textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/btn_filter"
                    android:layout_toStartOf="@id/btn_filter"
                    android:gravity="start|center_vertical"
                    android:textStyle="bold"
                    tools:text="Query" />

                <ImageButton
                    android:id="@id/btn_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignWithParentIfMissing="true"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/btn_web_search"
                    android:layout_toStartOf="@id/btn_web_search"
                    android:background="?selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/filter_hint"
                    android:padding="8dp"
                    android:src="@drawable/ic_filter_list"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@id/btn_web_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignWithParentIfMissing="true"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/btn_play"
                    android:layout_toStartOf="@id/btn_play"
                    android:background="?selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/tts_play"
                    android:padding="8dp"
                    android:src="@drawable/ic_web_search" />

                <ImageButton
                    android:id="@id/btn_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="?selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/tts_play"
                    android:padding="8dp"
                    android:src="@drawable/ic_play_circle" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/shape_rounded_rect"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_filter_label"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@null"
                    android:textColor="#37474f"
                    tools:text="@string/filter_rhymer_label" />

                <TextView
                    android:id="@+id/tv_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:gravity="center_vertical"
                    android:textColor="#37474f"
                    tools:text="yesterday" />

                <ImageButton
                    android:id="@+id/btn_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_clear"
                    android:contentDescription="@string/filter_clear" />
            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shadow" />

        </LinearLayout>


        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null" />
    </LinearLayout>

</FrameLayout>
